# ChatBox-API

./: README.md
Chat_API/: CMakeLists.txt  partitions-16MiB.csv  sdkconfig
Chat_API/main/: CMakeLists.txt  main.c
Chat_API/main/APP/: toy_audio.c  toy_audio.h  toy_bat.c  toy_bat.h  toy_ble.c  toy_ble.h  toy_button.c  toy_button.h  toy_fatfs.c  toy_fatfs.h  toy_https.c  toy_https.h  toy_led.c  toy_led.h  toy_oled.c  toy_oled.h  toy_uart.c  toy_uart.h  toy_websocket.c  toy_websocket.h  toy_wifi.c  toy_wifi.h
Chat_API/main/certs/: chat_ca_cert.pem
